# search_logger

./: .gitignore  CMakeLists.txt  Makefile  README.md  console_gist.cpp  message.proto  search_logger.cpp
